# libqtxdg

./: .gitignore  AI_CODING_BEHAVIOR.md  CHANGELOG.md  CHANGELOG_QML.md  CLAUDE.md  CMakeLists.txt  DROID_PROJECT_PROMPT.md  Qt6_CPP17_Coding_Style.md  README.md  README_QML_BINDINGS.md  REFACTORING_ANALYSIS.md  SYSTEM_DOCUMENTATION.md
cmake/: Qt6QuickXdg.pc.in  Qt6QuickXdgIconLoader.pc.in  Qt6QuickXdgWidgets.pc.in  compiler_settings.cmake  qt6quickxdg-config.cmake.in  qt6quickxdgiconloader-config.cmake.in  qt6quickxdgwidgets-config.cmake.in  qt6xdg-config.cmake.in  qt6xdgwidgets-config.cmake.in
doc/: API_REFERENCE.md  EXAMPLE_CODE_COLLECTION.md  FINAL_PERFORMANCE_VERIFICATION_REPORT.md  LONG_RUNNING_TEST_VERIFICATION_REPORT.md  MODEL_USAGE_GUIDE.md  PROJECT_COMPLETION_SUMMARY.md  QML_API_GUIDE.md  WIDGETS_REFACTORING.md  XdgMenuTreeModel_Implementation.md  icon_engine_analysis.md
examples/: CLAUDE.md  CMakeLists.txt
examples/qml-example/: ApplicationLauncher.qml  ApplicationsExample.qml  CMakeLists.txt  IconCacheStressTest.qml  MenuTreeExample.qml  MimeTypeExample.qml  PerformanceDashboard.qml  README.md  SearchModesExample.qml  main.cpp  main.qml  test_api.qml  test_icon.qml  test_icon_provider.cpp  test_runner.cpp
examples/use-qtxdg/: CMakeLists.txt
qml/: FastIconImage.qml  FastIconStatsTest.qml  FastIconTest.qml
src/: CMakeLists.txt
src/qtxdg/: CLAUDE.md  CMakeLists.txt
src/qtxdgqml/: CLAUDE.md  CMakeLists.txt  cachedtexturefactory.cpp  cachedtexturefactory.h  diskiconcache.cpp  diskiconcache.h  fasticonprovider.cpp  fasticonprovider.h  fasticonresponse.cpp  fasticonresponse.h  fasticonstats.cpp  fasticonstats.h  iconusagetracker.cpp  iconusagetracker.h  qtxdgqmlplugin.cpp  qtxdgqmlplugin.h  xdgapplicationsmodel.cpp  xdgapplicationsmodel.h  xdgautostartmodel.cpp  xdgautostartmodel.h  xdgautostartwrapper.cpp  xdgautostartwrapper.h  xdgdefaultappswrapper.cpp  xdgdefaultappswrapper.h  xdgdesktopfilewrapper.cpp  xdgdesktopfilewrapper.h  xdgdirswrapper.cpp  xdgdirswrapper.h  xdgiconengineinitializer.cpp  xdgiconengineinitializer.h  xdgiconprovider.cpp  xdgiconprovider.h  xdgiconwrapper.cpp  xdgiconwrapper.h  xdgmenutreemodel.cpp  xdgmenutreemodel.h  xdgmenuwrapper.cpp  xdgmenuwrapper.h  xdgmimeappswrapper.cpp  xdgmimeappswrapper.h  (+4 more)
src/qtxdgwidgets/: CMakeLists.txt
src/xdgiconloader/: CLAUDE.md  CMakeLists.txt
src/xdgiconloader/plugin/: CMakeLists.txt  deckxdgiconengineplugin.json  xdgiconengineplugin.h
test/: CMakeLists.txt  bench_xdgmenutreemodel.cpp  bench_xdgmenutreemodel.h  tst_xdgapplicationsmodel.cpp  tst_xdgapplicationsmodel.h  tst_xdgmenutreemodel.cpp  tst_xdgmenutreemodel.h  tst_xdgmenuwrapper.cpp  tst_xdgmenuwrapper.h  tst_xdgmimeappswrapper.cpp  tst_xdgmimeappswrapper.h  tst_xdgmimewrapper.cpp  tst_xdgmimewrapper.h
